--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -411,13 +411,17 @@ footer {
             width: 300px;
         }
 
+        .three {
+            top: 100vh;
+        }
+
         .four,
         .five {
             display: none;
         }
 
         .six {
-            bottom: 80vh;
+            bottom: 90vh;
             left: 5%;
         }
     }
